# octarou

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  flake.nix  index.html  manifest.json  octarou-6024931a41446bf42d0540941a9cdbecebef10463fe0c79abe112a924b7ff36004fe5cf50fce7d39aef8c9e999dd29fd.js  octarou-6024931a41446bf42d0540941a9cdbecebef10463fe0c79abe112a924b7ff36004fe5cf50fce7d39aef8c9e999dd29fd_bg.wasm  octarou-883b65f296386a68091354474152a3ae79de91cbd0f33fd072368a406f805a96d8599a8841bd1aa45ba537250e07dbd9.js  octarou-883b65f296386a68091354474152a3ae79de91cbd0f33fd072368a406f805a96d8599a8841bd1aa45ba537250e07dbd9_bg.wasm  octarou-b6455b6b0c806c24.js  octarou-b6455b6b0c806c24_bg.wasm
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: build_nix.yml  pages.yml
assets/: sw.js
doc/paper/: .envrc
doc/paper/src/: main.bib  main.tex
doc/paper/src/codeblocks/: app-struct.rs  chip8.rs  cross.nix  interpreter-trait.rs  next-instruction.rs  nonzerou8.rs  octarou-devshell.nix  opcodes.rs  package.nix  paper.nix  scroll.rs
src/: .state.rs.rustfmt  app.rs  args.rs  display.rs  main.rs  operation.rs  state.rs
src/chip/: chip8.rs  interpreter.rs  mod.rs  schip.rs  superchip.rs
src/chip8/: mod.rs  operation.rs  state.rs
src/interpreter/: chip8.rs  instruction.rs  mod.rs  schip.rs  superchip.rs
src/window/: minifb.rs  mod.rs
