[package]
name = "octarou"
description = "CHIP-8 interpreter for my high-school CS final project"
authors = ["Nicolas Bratoveanu <nicolasbratoveanu@proton.me"]
repository = "https://github.com/Nikoof/octarou"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
eframe = "0.25.0"
egui = "0.25.0"
egui_file = "0.14.0"
egui_logger = { git = "https://github.com/nikoof/egui_logger" }
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
