[package]
name = "octarou"
description = "CHIP-8 interpreter for my high-school CS final project"
authors = ["Nicolas Bratoveanu <nicolasbratoveanu@proton.me"]
repository = "https://github.com/Nikoof/octarou"
version = "0.2.0"
edition = "2021"

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
rand = "0.8.5"
thiserror = "1.0.56"

egui = "0.25.0"
eframe = { version = "0.25.0", features = ["default_fonts", "glow"] }
egui_file = "0.14.0"
egui_logger = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2.12", features = ["js"] }
console_error_panic_hook = "0.1.7"
multi_log = "0.1.2"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
