[package]
name = "octarou"
description = "CHIP-8 interpreter for my high-school CS final project"
authors = ["Nicolas Bratoveanu <nicolasbratoveanu@proton.me"]
repository = "https://github.com/Nikoof/octarou"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
rand = "0.8.5"
thiserror = "1.0.56"

egui = "0.25.0"
eframe = { version = "0.25.0", features = ["default_fonts", "glow"] }
egui_logger = { git = "https://github.com/nikoof/egui_logger" }
rfd = { version = "0.12.1", features = [
  "xdg-portal",
], default_features = false }
futures = "0.3.30"
rodio = { version = "0.17.3", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2.12", features = ["js"] }
multi_log = "0.1.2"
rfd = { version = "0.12.1", features = [
  "file-handle-inner",
], default_features = false }
rodio = { version = "0.17.3", default-features = false, features = [
  "wasm-bindgen",
] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
